--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,14 +32,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.9
+  image: ^4.1.6
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
@@ -58,6 +53,7 @@ flutter:
   assets:
     - assets/day61/
     - assets/day62/
+    - assets/day63/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
@@ -73,7 +69,6 @@ flutter:
         - asset: assets/day62/fonts/cinzel/Cinzel-Bold.ttf
         - asset: assets/day62/fonts/cinzel/Cinzel-Medium.ttf
         - asset: assets/day62/fonts/cinzel/Cinzel-Regular.ttf
-
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
