--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ flutter:
     - assets/day66/
     - assets/day67/
     - assets/day68/
+    - assets/day69/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
